<resources>
    <string name="app_name">lab8atls4120</string>
    <string name="icecream_heading">Ice Cream Maker</string>
    <string name="radioVanilla">vanilla</string>
    <string name="radioChocolate">chocolate</string>
    <string name="radioStrawberry">strawberry</string>
    <string name="icecreamButton">Create Ice Cream</string>
    <string name="sprinklesCheck">sprinkles</string>
    <string name="hotfudgeCheck">hotfudge</string>
    <string name="caramelCheck">caramel</string>
    <string name="nutsCheck">nuts</string>
    <string name="hotFudgeCheck">hot fudge</string>
    <string name="dairy_free">dairy free</string>
    <string-array name="location">
        <item>The Hill</item>
        <item>Baseline</item>
        <item>Pearl Street</item>
    </string-array>
</resources>